fixed alignment issue in small screen lanscape mode

--- a/footer-distributed-with-address-and-phones.css
+++ b/footer-distributed-with-address-and-phones.css
@@ -20,7 +20,7 @@
 	width: 40%;
 }
 
-@media all and (max-width: 601px) {
+@media all and (max-width: 650px) {
 	.footer-distributed{
 		width:95%;
 		margin:10px auto;
@@ -67,7 +67,7 @@
 	width: 35%;
 	padding-left:25%;
 }
-@media all and (max-width: 601px) {
+@media all and (max-width: 650px) {
 	.footer-distributed .footer-center{
 		width: 35%;
 		padding-left:0px;
